@@ -1,0 +1,2 @@
+hasprevious $wizardhelper.HasPreviousStep
+hasnext $wizardhelper.HasNextStep
